@@ -74,7 +74,7 @@ EOF
 
 cat tst.r
 
-run_CMD "$RATFOR" tst.r || testcase_FAIL
+run_CMD timer -t 5 "$RATFOR" tst.r || testcase_FAIL
 $GREP -v '^[cC]' <stdout | ws_strip >got
 
 cat exp
